# Vocabulary_Backend_with_uWebSockets

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
LogMonitor/: LogMonitor.cpp
Vocabulary/include/Core/: Base.h  Helper.h  Logger.h  TCPServer.h  uWebSockets.h
Vocabulary/include/json_singletons/: JSONDatabaseUser.h  JSONDatabaseVocabulary.h
Vocabulary/include/sqlite_database/: VocabularyDatabaseSQLite.h
Vocabulary/include/uwebsockets/: App.h
Vocabulary/src/Core/: EntryPoint.cpp  Helper.cpp  Logger.cpp  TCPServer.cpp  uWebSockets.cpp
Vocabulary/src/json_singletons/: JSONDatabaseUser.cpp  JSONDatabaseVocabulary.cpp
Vocabulary/src/sqlite_database/: VocabularyDatabaseSQLite.cpp
